resources/deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      dnsConfig:
        nameservers:
        - 10.43.0.10
      dnsPolicy: None
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr:5.16.3.9541-ls251
        imagePullPolicy: IfNotPresent
        ports:
        - name: radarr
          containerPort: 7878
        volumeMounts:
        - name: radarr
          mountPath: /config
        - name: complete
          mountPath: /mnt/complete
        - name: critical-movies
          mountPath: /mnt/critical-movies
        - name: movies
          mountPath: /mnt/movies
        resources:
          limits:
            memory: 700Mi
          requests:
            memory: 350Mi
        readinessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: radarr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: radarr
        persistentVolumeClaim:
          claimName: radarr
      - name: radarr-config
        secret:
          secretName: radarr-config
      - name: complete
        nfs:
          path: /volume1/media/complete
          server: 192.168.1.21
      - name: critical-movies
        nfs:
          path: /volume1/critical/media/movies
          server: 192.168.1.21
      - name: movies
        nfs:
          path: /volume1/media/movies
          server: 192.168.1.21
