resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: radarr
  selector:
    app: radarr
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: radarr
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app: postgres
